# benchrun

./: .gitignore  README.md  pyproject.toml
benchrun/: __init__.py  benchmark.py  comparison.py  display.py  results.py  runner.py
examples/: advanced_benchmark.py  advanced_usage.py  basic_usage.py  multi_implementation.py  simple_comparison.py
src/benchrun/: __init__.py  core.py
tests/: __init__.py  test_core.py  test_display.py
